feat: 🖼️ improve theme preview, ⚡ add fast build commands

--- a/src/Shopfoo.Client/styles/styles.css
+++ b/src/Shopfoo.Client/styles/styles.css
@@ -3,4 +3,6 @@
 @plugin "daisyui" {
     themes: all;
 }
+@tailwind utilities; /* Force inclusion of theme utilities */
 @source "../.fable-build/**/*.{js,ts,jsx,tsx}";
+@source "../src/**/*.fs";
